Assistant checkpoint: Created basic HTML, CSS, and JavaScript files
Assistant generated file changes:
- client/index.html: Basic HTML structure
- client/style.css: Basic CSS styles
- client/script.js: Basic JavaScript functionality

---

User prompt:

give me html, css and javascript files only. I don't need etobeshi habijabi file

--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,7 @@
 
         <section id="projects" class="projects">
             <h2>Our Projects</h2>
-            <div class="project-grid">
-                <!-- Projects will be loaded via JavaScript -->
-            </div>
+            <div class="project-grid"></div>
         </section>
 
         <section id="contact" class="contact">
