--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
+            <button onclick="toggleTheme()" class="theme-toggle">🌙</button>
         </div>
     </nav>
 
