--- a/client/index.html
+++ b/client/index.html
@@ -4,23 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>DABAA - Digital Services</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav-logo">Logo</div>
+        <div class="nav-logo">DABAA</div>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
 
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to Our Website</h1>
-            <p>Building amazing things</p>
+            <h1>Welcome to DABAA Digital Services</h1>
+            <p>We create amazing digital experiences</p>
         </section>
 
         <section id="projects" class="projects">
@@ -40,9 +42,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 All rights reserved.</p>
+        <p>&copy; 2024 DABAA Digital Services. All rights reserved.</p>
     </footer>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
