Restored to '20066c93f519bcb79b48f3f2f1e7082e509c793c'
Replit-Restored-To:20066c93f519bcb79b48f3f2f1e7082e509c793c

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,9 @@
 
         <section id="projects" class="projects">
             <h2>Our Projects</h2>
-            <div class="project-grid"></div>
+            <div class="project-grid">
+                <!-- Projects will be loaded via JavaScript -->
+            </div>
         </section>
 
         <section id="contact" class="contact">
